客户端的模型或者数据之类的传输工作